--- a/style.css
+++ b/style.css
@@ -1,41 +1,34 @@
 body {
+  margin: 0;
+  font-family: Arial;
   background: #0f0f0f;
   color: #fff;
-  font-family: Arial, sans-serif;
 }
 
 .container {
-  max-width: 450px;
-  margin: 30px auto;
-  padding: 15px;
-}
-
-h1 {
-  text-align: center;
+  max-width: 480px;
+  margin: 20px auto;
 }
 
 .card {
   background: #1b1b1b;
   padding: 15px;
   border-radius: 10px;
-  margin-bottom: 15px;
+  margin-bottom: 12px;
 }
 
-input, select {
+input, select, button {
   width: 100%;
   padding: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 8px;
   border-radius: 5px;
   border: none;
 }
 
 button {
-  width: 100%;
-  padding: 12px;
   background: #c89b3c;
-  border: none;
-  border-radius: 5px;
   font-weight: bold;
+  cursor: pointer;
 }
 
 .fechar {
@@ -54,4 +47,33 @@ ul {
 li {
   border-bottom: 1px solid #333;
   padding: 5px 0;
+}
+
+/* SPLASH */
+.splash {
+  position: fixed;
+  inset: 0;
+  background-image: url("img/barbearia.jpg");
+  background-size: cover;
+  background-position: center;
+  z-index: 9999;
+}
+
+.splash-overlay {
+  position: absolute;
+  inset: 0;
+  background: rgba(0,0,0,0.65);
+}
+
+.splash-box {
+  position: relative;
+  z-index: 2;
+  max-width: 400px;
+  margin: auto;
+  top: 50%;
+  transform: translateY(-50%);
+  background: rgba(20,20,20,0.9);
+  padding: 30px;
+  border-radius: 15px;
+  text-align: center;
 }
